feat: [tablet] 新增平板模式下屏蔽自定义主题功能
1. 新增平板模式下屏蔽自定义主题功能
2. 将SwitchThemeMenu类放到views目录下
3. MainWindow代码重构，修正了成员变量名，并修改对应单元测试代码

Log: 新增平板模式下屏蔽自定义主题功能
Change-Id: Ib82f860f1becbf4206fc13fcb35dc4526b22e793

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,6 +128,7 @@ set (DTNG_CPP_FILES
     src/main/service.cpp
     src/main/windowsmanager.cpp
     src/main/mainwindow.cpp
+    src/main/tabletwindow.cpp
     src/main/terminalapplication.cpp
     src/main/termproperties.cpp    
     src/main/dbusmanager.cpp
@@ -165,6 +166,7 @@ set (DTNG_CPP_FILES
     src/views/listview.cpp
     src/views/customthemesettingdialog.cpp
     src/views/themepreviewarea.cpp
+    src/views/switchthememenu.cpp
 )
 
 set (DTNG_HEADER_FILES
@@ -183,6 +185,7 @@ set (DTNG_HEADER_FILES
     src/main/windowsmanager.h
     src/main/mainwindow.h
     src/main/mainwindowplugininterface.h
+    src/main/tabletwindow.h
     src/main/service.h
     src/main/terminalapplication.h
     src/main/termproperties.h
@@ -220,6 +223,7 @@ set (DTNG_HEADER_FILES
     src/views/listview.h
     src/views/customthemesettingdialog.h
     src/views/themepreviewarea.h
+    src/views/switchthememenu.h
 )
 
 set (DTNG_QRC_FILES
