feat: [tablet] 虚拟键盘弹出时对话框的相关适配，主要适配了自定义命令、远程管理、设置、重命名标题对话框
虚拟键盘弹出时对话框的相关适配，主要适配了自定义命令、远程管理、设置、重命名标题对话框

Log: 虚拟键盘弹出时对话框的相关适配，主要适配了自定义命令、远程管理、设置、重命名标题对话框
Change-Id: I1ea6e27e5896045483bca3fef5fe4720c0acac18

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -167,6 +167,8 @@ set (DTNG_CPP_FILES
     src/views/customthemesettingdialog.cpp
     src/views/themepreviewarea.cpp
     src/views/switchthememenu.cpp
+    src/views/tabletabstractdialog.cpp
+    src/views/tabletsettingsdialog.cpp
 )
 
 set (DTNG_HEADER_FILES
@@ -224,6 +226,8 @@ set (DTNG_HEADER_FILES
     src/views/customthemesettingdialog.h
     src/views/themepreviewarea.h
     src/views/switchthememenu.h
+    src/views/tabletabstractdialog.h
+    src/views/tabletsettingsdialog.h
 )
 
 set (DTNG_QRC_FILES
