feat: [tablet] 平板模式移除Dock栏右键菜单的“新建窗口”、“雷神窗口”
平板模式移除Dock栏右键菜单的“新建窗口”、“雷神窗口”

Log: 平板模式移除Dock栏右键菜单的“新建窗口”、“雷神窗口”
Change-Id: I6228b7db0d938f1ec7e1ead08a4455f1ef1afcb3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -278,7 +278,10 @@ endif ()
 
 #install(TARGETS deepin-terminal DESTINATION ${CMAKE_INSTALL_PREFIX}/share/deepin-terminal)
 
-install(FILES src/deepin-terminal.desktop
+#install(FILES src/deepin-terminal.desktop
+#        DESTINATION ${CMAKE_INSTALL_PREFIX}/share/applications/)
+# 平板模式desktop文件去除了新建窗口、雷神窗口相关项目
+install(FILES src/desktop_tablet/deepin-terminal.desktop
         DESTINATION ${CMAKE_INSTALL_PREFIX}/share/applications/)
 
 install(FILES src/assets/logo/deepin-terminal.svg
