feat: [tablet] 平板模式适配虚拟键盘功能优化
平板模式适配虚拟键盘功能优化：
1. 关闭单元测试开关，加快构建速度
2. ServerConfigGroupPanel添加遗漏的resizeEvent用于适配虚拟键盘
3. resizeEvent中添加判断防止调用this->resize函数后循环触发resizeEvent

Log: 平板模式适配虚拟键盘功能优化
Change-Id: Ic0ab1bdf722c00b9cb95b0d3cf8ba7b77e19f8b8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -299,7 +299,7 @@ install(DIRECTORY src/assets/deepin-terminal
         DESTINATION /usr/share/deepin-manual/manual-assets/application/)
 
 # Unit Test
-option(UT_SWITCH "Do you want to run ut code" ON)
+option(UT_SWITCH "Do you want to run ut code" OFF)
 #if ((${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64") AND UT_SWITCH)
 if (UT_SWITCH)
     add_subdirectory(test)
