chore: [1040-4] 完善单元测试代码
1. 完善第三方库的单元测试代码
2. 将termwidget类的lambda表达式替换为内联槽函数

Log: 完善单元测试代码
Change-Id: If683e6572c802d7e4cfc80803e76a4c736a86d99

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(Qt5Test REQUIRED)
 find_package(GTest REQUIRED)
 
 add_definitions(${Qt5Test_DEFINITIONS})
+add_definitions(-D UNIT_TEST)
 
 include_directories(${GTEST_INCLUDE_DIRS})
 include_directories("src/common")
