--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -35,6 +35,24 @@
                             "hide": true,
                             "reset": false,
                             "default": "Linux"
+                        }  
+                    ]
+                },
+                {
+                    "key": "tab_title",
+                    "name": "Tab titles",
+                    "options": [
+                        {
+                            "key": "tab_title_format",
+                            "name": "Tab title format",
+                            "type": "tabformatedit",
+                            "default": "%w"
+                        },
+                        {
+                            "key": "remote_tab_title_format",
+                            "name": "Remote tab title format",
+                            "type": "remotetabformatedit",
+                            "default": "%U%h"
                         }
                     ]
                 }
