chore: [1040] 注释掉include(LXQtPreventInSourceBuilds)以支持命令行cmake构建
注释掉include(LXQtPreventInSourceBuilds)以支持命令行cmake构建

Log: 注释掉include(LXQtPreventInSourceBuilds)以支持命令行cmake构建
Change-Id: Id25faa75ca0c93795802dca2b5ca86912557e2e9

--- a/3rdparty/terminalwidget/CMakeLists.txt
+++ b/3rdparty/terminalwidget/CMakeLists.txt
@@ -44,7 +44,8 @@ if(USE_UTF8PROC)
     find_package(Utf8Proc REQUIRED)
 endif()
 
-include(LXQtPreventInSourceBuilds)
+#注释掉下面这行，否则无法支持命令行cmake构建
+#include(LXQtPreventInSourceBuilds)
 include(LXQtTranslateTs)
 include(LXQtCompilerSettings NO_POLICY_SCOPE)
 include(LXQtCreatePkgConfigFile)
