chore: [1040] 代码review 修改
1. 代码review 修改
2. lintian报错修改

Log: 代码review 修改
Change-Id: I4c718b0a81335898bbbda6cfb4aff5161eed2cfc

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: utils
 Priority: optional
 Maintainer: Deepin Packages Builder <packages@deepin.org>
 Build-Depends:
- debhelper(>= 9),
+ debhelper(>= 11),
  cmake,
  pkg-config,
  qtbase5-dev,
@@ -17,7 +17,7 @@ Build-Depends:
  libsecret-1-dev,
  libgtest-dev,
  libgmock-dev
-Standards-Version: 3.9.8
+Standards-Version: 4.5.1
 Homepage: https://www.deepin.com/
 
 Package: deepin-terminal
@@ -27,5 +27,9 @@ Depends:
  ${misc:Depends},
  expect,
  zssh
-Description: Terminal is an advanced terminal emulator with workspace, multiple windows, remote management, quake mode and other features.
- Terminal is a terminal emulator with simple interface, rich and powerful functions such as multi-windows, workspace, remote management, Quake mode and etc. You can instantly start and close Terminal smoothly like normal file window, allowing you to input commands with facility and no distractions.
+Description: Terminal is an advanced terminal emulator with workspace, multiple
+ windows, remote management, quake mode and other features.
+ Terminal is a terminal emulator with simple interface, rich and powerful
+ functions such as multi-windows, workspace, remote management, Quake mode
+ and etc. You can instantly start and close Terminal smoothly like normal
+ file window, allowing you to input commands with facility and no distractions.
