fix: bug[71612]默认主题是深色，需修改为跟随系统
修复默认主题是深色，需修改为跟随系统在问题

Log: 修复默认主题是深色，需修改为跟随系统在问题

Bug: https://pms.uniontech.com/zentao/bug-view-71612.html
Change-Id: I7a7467f8eb5af47076a72909c070c0e1028847bf

--- a/src/assets/other/default-config-tablet.json
+++ b/src/assets/other/default-config-tablet.json
@@ -34,7 +34,7 @@
                             "key": "theme",
                             "hide": true,
                             "reset": false,
-                            "default": "Linux"
+                            "default": ""
                         },
                         {
                             "key": "expand_theme",
