chore: 添加ASAN安全性检测
添加ASAN安全性检测

Log: 添加ASAN安全性检测
Change-Id: I9439dec48a528d0a0d92d4b2a3116e772e8d147c

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -139,3 +139,16 @@ add_custom_command(TARGET test
 #'make test'命令依赖与我们的测试程序
 add_dependencies(test ${PROJECT_NAME_TEST})
 
+#ASAN安全性检测标志
+set(CMAKE_SAFETYTEST "${CMAKE_SAFETYTEST_ARG}")
+if(CMAKE_SAFETYTEST STREQUAL "")
+    set(CMAKE_SAFETYTEST "CMAKE_SAFETYTEST_ARG_OFF")
+endif()
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D${CMAKE_SAFETYTEST}")
+if(CMAKE_SAFETYTEST STREQUAL "CMAKE_SAFETYTEST_ARG_ON")
+  #安全测试选项
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fsanitize=address -O2")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fsanitize=address -O2")
+endif()
+
