--- a/debian/rules
+++ b/debian/rules
@@ -15,6 +15,7 @@ override_dh_shlibdeps:
 override_dh_auto_configure:
 	dh_auto_configure -- \
 	-DCMAKE_BUILD_TYPE=Release \
+	-DCMAKE_SAFETYTEST_ARG="CMAKE_SAFETYTEST_ARG_OFF" \
 	-DCMAKE_INSTALL_PREFIX=/usr \
 	-DAPP_VERSION=$(DEB_VERSION_UPSTREAM) \
 	-DVERSION=$(DEB_VERSION_UPSTREAM) \
