fix: bug#71068 【ARM】【IM】【V1.0.0】【虚拟键盘】在终端收起虚拟键盘后,点击输入框区域无法唤起
Description: 在终端收起虚拟键盘后,点击输入框区域无法唤起【平板】

Log: 在终端收起虚拟键盘后,点击输入框区域无法唤起
Change-Id: I28bae59c49cc2c22b3d77cf9e3e05ad2f5f9a5f3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,6 +110,7 @@ set(LINK_LIBS
 set (DTNG_CPP_FILES
     src/common/utils.cpp
     src/common/settingio.cpp
+    src/common/ImInterface.cpp
     src/customcommand/customcommandoptdlg.cpp
     src/customcommand/customcommandpanel.cpp
     src/customcommand/customcommandplugin.cpp
@@ -170,6 +171,7 @@ set (DTNG_HEADER_FILES
     src/common/define.h
     src/common/utils.h
     src/common/settingio.h
+    src/common/ImInterface.h
     src/customcommand/customcommandoptdlg.h
     src/customcommand/customcommandpanel.h
     src/customcommand/customcommandplugin.h
