fix: 修复a版本第三方库编译报错
修复a版本第三方库编译报错

Log: 修复a版本第三方库编译报错

Change-Id: Iaf108d87dd2c404554a8d1e80e99b07e7ce5c66a
(cherry picked from commit 6c9c1d191cb339ae07ca635a0168eb748563a454)

--- a/3rdparty/terminalwidget/CMakeLists.txt
+++ b/3rdparty/terminalwidget/CMakeLists.txt
@@ -59,6 +59,7 @@ endif()
 
 set(TERMINALWIDGET_LIBRARY_NAME terminalwidget5)
 
+remove_definitions(-DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_CAST_FROM_BYTEARRAY)
 
 # main library
 
