feat: 添加代码覆盖率统计配置
添加代码覆盖率统计配置

Log: 添加代码覆盖率统计配置

Task: https://pms.uniontech.com/task-view-101677.html

Change-Id: I013329d06b1f2fe872cef660d5a8f94b0c1dc705

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,12 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fstack-protector-strong -D_FORTITY_SOUR
 
 configure_file(src/environments.h.in environments.h @ONLY)
 
+#代码覆盖率开关
+if(CMAKE_COVERAGE_ARG STREQUAL "CMAKE_COVERAGE_ARG_ON")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -fprofile-arcs -ftest-coverage")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -fprofile-arcs -ftest-coverage")
+endif()
+
 # Find the QtWidgets library
 
 find_package(PkgConfig REQUIRED)
@@ -281,3 +287,5 @@ install(DIRECTORY src/assets/deepin-terminal
 
 # Unit Test
 add_subdirectory(tests)
+
+
