--- a/debian/control
+++ b/debian/control
@@ -34,3 +34,4 @@ Description: Terminal is an advanced terminal emulator with workspace, multiple
  functions such as multi-windows, workspace, remote management, Quake mode
  and etc. You can instantly start and close Terminal smoothly like normal
  file window, allowing you to input commands with facility and no distractions.
+Recommends: uos-reporter, deepin-event-log
