feat: 废弃DDE-Daemon字体接口，改用fontconfig
字体功能将不再依赖DDE-Daemon提供的接口，改为使用fontconfig来获取．
基本保持和DDE-Daemon对应接口的实现一致．
fix https://github.com/linuxdeepin/developer-center/issues/3392

Log: 废弃DDE-Daemon字体接口，改用fontconfig

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ find_package(Qt5Network REQUIRED)
 find_package(Qt5X11Extras REQUIRED)
 
 include(FindPkgConfig)
+include(FindFontconfig)
 
 pkg_search_module(DtkWidget REQUIRED dtkwidget)
 pkg_search_module(DtkGui REQUIRED dtkgui)
@@ -114,6 +115,7 @@ set(LINK_LIBS
     ${LIBSECRET_LIBRARIES}
     ${XCB_EWMH_LIBRARIES}
     ${Qt5X11Extras_LIBRARIES}
+    ${Fontconfig_LIBRARIES}
 )
 
 # Populate a CMake variable with the sources
