--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,8 @@ Build-Depends:
  libsecret-1-dev,
  libgtest-dev,
  libgmock-dev,
- libxcb-ewmh-dev
+ libxcb-ewmh-dev,
+ fontconfig
 Standards-Version: 4.5.1
 Homepage: https://www.deepin.com/
 
