feat: 增加终端透明与不透明快速切换快捷键
Description: 为满足特定使用场景,比如需要透视终端的情况,在设置界面调节透明度比较低效率。通过快捷键实现透明和不透明快速切换功能。

Log: 未完成多语言翻译,仅完成中文翻译。

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -116,6 +116,12 @@
                             "name": "Select all",
                             "type": "shortcut",
                             "default":  "Ctrl+Shift+A"
+                        },
+                        {
+                            "key": "transparency",
+                            "name": "Transparency",
+                            "type": "shortcut",
+                            "default": "Alt+R"
                         }
                     ]
                 },
