feat: 增加终端加粗下划线光标设置选项
Description: 在终端使用vi/vim编辑器,或者光标在具有下划线的字符串时,单像素下划线光标很难被发现。使用加粗下划线(4像素)能够快速发现光标位置,提升体验。目前已知问题:例如在vim里面高亮选择的内容是上下行时,此时光标位置处,因为第三方库的选择区域高度,导致色块连接,让加粗下划线显示为1像素的横线。

Log: 增加终端加粗下划线光标设置选项,增强用户使用体验

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -308,7 +308,7 @@
                             "key": "cursor_shape",
                             "name": "Cursor style",
                             "type": "buttongroup",
-                            "items": ["▐","_","|"],
+                            "items": ["▐","_","|","▂"],
                             "default": 0,
                             "i18n_skip_keys": ["items"]
                         },
