feat: 终端设置增加在双击选中区域包含特殊符号选项
Description: 本次提交提供在终端设置选项里面，自定义双击选中区域包含特殊符号的功能。

Log: 终端设置增加在双击选中区域包含特殊符号选项

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -313,12 +313,17 @@
                             "i18n_skip_keys": ["items"]
                         },
                         {
+                            "key": "include_special_characters_in_double_click_selections",
+                            "name": "Include special character(s) in double click selections",
+                            "type": "lineedit",
+                            "default": ":@-./_~"
+                        },
+                        {
                             "key": "cursor_blink",
                             "type": "checkbox",
                             "text": "Cursor blink",
                             "default": true
                         },
-                          
                         {
                             "key": "auto_copy_selection",
                             "type": "checkbox",
