feat: 优化远程服务器功能的实现
修改了添加分组的操作逻辑
添加了删除服务器的按钮
添加了服务器和分组的分割标签
添加了“添加分组/编辑分组”按钮

Log: 优化远程服务器功能的实现

Signed-off-by: Yutao Meng <mengyutao@deepin.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,6 +140,7 @@ set (DTNG_CPP_FILES
     src/main/terminalapplication.cpp
     src/main/termproperties.cpp    
     src/main/dbusmanager.cpp
+    src/remotemanage/groupconfigoptdlg.cpp
     src/remotemanage/remotemanagementpanel.cpp
     src/remotemanage/remotemanagementplugn.cpp
     src/remotemanage/remotemanagementsearchpanel.cpp
