fix: 尝试修复禁用Flowcontrol后，拦截Ctrl+S/Q快捷键的问题
底层三方库使用了错误的控制流判断方式。修改为直接读取状态后解决。

Bug: https://github.com/linuxdeepin/developer-center/issues/4612
Log: 尝试修复禁用Flowcontrol后，拦截Ctrl+S/Q快捷键的问题
Signed-off-by: Yutao Meng <mengyutao@deepin.org>

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -409,7 +409,7 @@
                             "default": "$SHELL"
                         },
                         {
-                            "key": "enable_ctrl_flow",
+                            "key": "disable_ctrl_flow",
                             "text": "Disable flow control using Ctrl+S, Ctrl+Q",
                             "type": "checkbox",
                             "default": "false"
