fix: add entry "Actions=xx;" for group [Desktop Entry], change other groupname to [Desktop Action xxx]
参考freedesktop桌面入口文件规范，
在[Desktop Entry]中增加应用动作描述：Actions=new-window;quake-mode;
修改组名[NewWindow Shortcut Group] -> [Desktop Action new-window]
修改组名[Quake Shortcut Group] -> [Desktop Action quake-mode]

--- a/src/deepin-terminal.desktop
+++ b/src/deepin-terminal.desktop
@@ -10,6 +10,7 @@ StartupNotify=false
 TryExec=deepin-terminal
 Type=Application
 X-Deepin-Vendor=deepin
+Actions=new-window;quake-mode;
 
 # Translations:
 # Do not manually modify!
@@ -216,7 +217,7 @@ Name[zh_CN]=深度终端
 Name[zh_HK]=Deepin 終端
 Name[zh_TW]=Deepin 終端機
 
-[NewWindow Shortcut Group]
+[Desktop Action new-window]
 Exec=deepin-terminal
 Name=New Window
 
@@ -266,7 +267,7 @@ Name[zh_CN]=新建窗口
 Name[zh_HK]=新建視窗
 Name[zh_TW]=新增視窗
 
-[Quake Shortcut Group]
+[Desktop Action quake-mode]
 Exec=deepin-terminal --quake-mode
 Name=Quake Terminal
 
