--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -41,7 +41,7 @@
                             "key": "theme",
                             "hide": true,
                             "reset": false,
-                            "default": "Linux"
+                            "default": ""
                         },
                         {
                             "key": "expand_theme",
