fix: 调整关闭标签页快捷键为更通用的Ctrl+W
Log: 调整关闭标签页快捷键：Alt+W -> Ctrl+W

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -139,7 +139,7 @@
                             "key": "close_tab",
                             "name": "Close tab",
                             "type": "shortcut",
-                            "default":  "Alt+W"
+                            "default":  "Ctrl+W"
                         },
                         {
                             "key": "close_other_tabs",
