feat: load keyboard layouts from runtime dir first
On MacOS or in debugging, we might need to load keyboard layouts
from runtime directory first.

Log: load keyboard layouts from runtime dir first

--- a/3rdparty/terminalwidget/CMakeLists.txt
+++ b/3rdparty/terminalwidget/CMakeLists.txt
@@ -155,6 +155,12 @@ set(HDRS_DISTRIB
     lib/TerminalDisplay.h
 )
 
+option(RUNDIR_KEYBOARD_LAYOUT_FIRST "Load keyboard layouts from application runtime directory" OFF)
+message(STATUS "Use runtime directory keyboard layouts first: ${RUNDIR_KEYBOARD_LAYOUT_FIRST}")
+if(CMAKE_BUILD_TYPE MATCHES Debug)
+    set(RUNDIR_KEYBOARD_LAYOUT_FIRST ON) # enable runtime layouts loading for debug
+endif()
+
 # dirs
 set(KB_LAYOUT_DIR "${CMAKE_INSTALL_FULL_DATADIR}/${TERMINALWIDGET_LIBRARY_NAME}/kb-layouts")
 message(STATUS "Keyboard layouts will be installed in: ${KB_LAYOUT_DIR}")
@@ -250,6 +256,7 @@ target_compile_definitions(${TERMINALWIDGET_LIBRARY_NAME}
         "TRANSLATIONS_DIR=\"${TRANSLATIONS_DIR}\""
         "HAVE_POSIX_OPENPT"
         "HAVE_SYS_TIME_H"
+        $<$<BOOL:RUNDIR_KEYBOARD_LAYOUT_FIRST>:RUNDIR_KEYBOARD_LAYOUT_FIRST>
 )
 
 
@@ -297,6 +304,11 @@ install(DIRECTORY
     COMPONENT Runtime
     FILES_MATCHING PATTERN "*.keytab"
 )
+
+if(RUNDIR_KEYBOARD_LAYOUT_FIRST)
+    file(COPY lib/kb-layouts/ DESTINATION ${CMAKE_BINARY_DIR}/kb-layouts)
+endif()
+
 # color schemes
 install(DIRECTORY
     lib/color-schemes/
