chore: 为Ctrl+鼠标左键点击移动光标功能新增配置
放置影响用户使用，新增配置，允许用户在配置中选择是否启用
默认不启用

Log: 为Ctrl+鼠标左键点击移动光标功能新增配置

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -335,6 +335,12 @@
                             "type": "checkbox",
                             "text": "Copy on select",
                             "default": true
+                        },
+			    {
+                            "key": "set_cursor_position",
+                            "type": "checkbox",
+                            "text": "Allow Ctrl + left mouse click to set cursor position",
+                            "default": false
                         }
                     ]
                 },
