--- a/.tx/transifex.yaml
+++ b/.tx/transifex.yaml
@@ -7,5 +7,15 @@ filters:
     file_format: QT
     source_language: en_US
     translation_files_expression: translations/deepin-terminal_<lang>.ts
+  - filter_type: file
+    source_file: 3rdparty/terminalwidget/lib/translations/terminalwidget.ts
+    file_format: QT
+    source_language: en_US
+    translation_files_expression: 3rdparty/terminalwidget/lib/translations/terminalwidget_<lang>.ts
+  - filter_type: file
+    source_file: translations/desktop/desktop.ts
+    file_format: QT
+    source_language: en_US
+    translation_files_expression: translations/desktop/desktop_<lang>.ts
 settings:
   pr_branch_name: transifex_update_<br_unique_id>
