feat: Add debuginfod settings
Allow user to enable/disable debuginfod environment variable

Requirements: https://pms.uniontech.com/story-view-37445.html
Log: Add debuginfod settings

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -419,6 +419,18 @@
                             "text": "Disable flow control using Ctrl+S, Ctrl+Q",
                             "type": "checkbox",
                             "default": "false"
+                        },
+                        {
+                            "key": "enable_debuginfod",
+                            "text": "debuginfod",
+                            "type": "checkbox",
+                            "default": "true"
+                        },
+                        {
+                            "key": "debuginfod_urls",
+                            "name": "debuginfod urls",
+                            "type": "lineedit",
+                            "default": "https://debuginfod.deepin.com"
                         }
                     ]
                 }
