fix: Optimize debuginfod options
Change debuginfod settings layout
fix debuginfod urls value setting during shell runtime
Hide debuginfod urls setting when debuginfod is disabled

pms:
BUG-288095
STORY-37445
Log: Optimize debuginfod options

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -419,10 +419,16 @@
                             "text": "Disable flow control using Ctrl+S, Ctrl+Q",
                             "type": "checkbox",
                             "default": "false"
-                        },
+                        }
+                    ]
+                },
+                {
+                    "key": "debuginfod",
+                    "name": "debuginfod",
+                    "options": [
                         {
                             "key": "enable_debuginfod",
-                            "text": "debuginfod",
+                            "text": "The HTTP file server used for transmitting debugging information resources",
                             "type": "checkbox",
                             "default": "true"
                         },
